Added link to next article on every article detail page. Changed color of comment section and base footer to --TT-black.

--- a/TT/static/riot/comment_section.html
+++ b/TT/static/riot/comment_section.html
@@ -120,7 +120,7 @@
     <style>
         comment-section {
             min-height: 400px;
-            background: var(--TT-blue);
+            background: var(--TT-black);
         }
 
         .outer-comment {
