changed a css class from  to , so it is more descriptive.

--- a/TT/static/riot/perlin.html
+++ b/TT/static/riot/perlin.html
@@ -36,7 +36,8 @@
             if (!!self.opts.background_color) {
                 scene.background = new THREE.Color(self.opts.background_color)
             } else {
-                scene.background = new THREE.Color(white)
+                //scene.background = new THREE.Color(white)
+                scene.background = new THREE.Color(green_blue)
             }
 
             let max_pixel_ratio = 4
